# vep-2026-system

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
.githooks/: prepare-commit-msg
